# cusfam

./: .gitignore  CMakeLists.txt  README.md  dnegri.cusfam.main.code-workspace
bld/: CMakeLists.txt  TextFile1.txt  cusfam.sln  cusfam.vcxproj  cusfam_cuda.sln  cusfam_cuda.vcxproj  cusfamf.vfproj  sample.pyproj  simon_sample.py
python/: ControlRod.py  PDIL.py  PlannedOperationStrategy.py  Simon.py  SimonManager.py  Strategy.py  XenonOscillationStrategy.py  __init__.py  cusfam.pyi  simon_sample.py  test_100_80_100.py  test_prepare.py  test_xenon_osci_control.py  test_xenon_osci_random_power.py
rst/: Y301ASBDEP.00000.SMR  Y301ASBDEP.00050.SMR  Y301ASBDEP.00150.SMR  Y301ASBDEP.00500.SMR  Y301ASBDEP.01000.SMR  Y301ASBDEP.02000.SMR  Y301ASBDEP.03000.SMR  Y301ASBDEP.04000.SMR  Y301ASBDEP.05000.SMR  Y301ASBDEP.06000.SMR  Y301ASBDEP.07000.SMR  Y301ASBDEP.08000.SMR  Y301ASBDEP.09000.SMR  Y301ASBDEP.10000.SMR  Y301ASBDEP.11000.SMR  Y301ASBDEP.12000.SMR  Y301ASBDEP.13000.SMR  Y301ASBDEP.13650.SMR  Y301ASBDEP.FCE.SMG  Y301ASBDEP.SMG
run/: 01_astra_y301_nom_boc.out  geom.simon
run/skn3/: S301NOMDEP.00000.SMR  S301NOMDEP.00050.SMR  S301NOMDEP.00500.SMR  S301NOMDEP.01000.SMR  S301NOMDEP.02000.SMR  S301NOMDEP.03000.SMR  S301NOMDEP.04000.SMR  S301NOMDEP.05000.SMR  S301NOMDEP.06000.SMR  S301NOMDEP.07000.SMR  S301NOMDEP.08000.SMR  S301NOMDEP.09000.SMR  S301NOMDEP.10000.SMR  S301NOMDEP.11000.SMR  S301NOMDEP.12000.SMR  S301NOMDEP.13000.SMR  S301NOMDEP.14000.SMR  S301NOMDEP.15000.SMR  S301NOMDEP.16000.SMR  S301NOMDEP.17000.SMR  S301NOMDEP.17571.SMR  S301NOMDEP.FCE.SMG  S301NOMDEP.SMG  S304NDR.00000.SMR  S304NDR.00050.SMR  S304NDR.00500.SMR  S304NDR.01000.SMR  S304NDR.02000.SMR  S304NDR.03000.SMR  S304NDR.04000.SMR  S304NDR.05000.SMR  S304NDR.06000.SMR  S304NDR.07000.SMR  S304NDR.08000.SMR  S304NDR.09000.SMR  S304NDR.10000.SMR  S304NDR.11000.SMR  S304NDR.12000.SMR  S304NDR.13000.SMR  S304NDR.14000.SMR  (+6 more)
run/ucn6/: UCN612ASBDEP.00000.SMR  UCN612ASBDEP.00050.SMR  UCN612ASBDEP.00500.SMR  UCN612ASBDEP.01000.SMR  UCN612ASBDEP.02000.SMR  UCN612ASBDEP.03000.SMR  UCN612ASBDEP.04000.SMR  UCN612ASBDEP.05000.SMR  UCN612ASBDEP.06000.SMR  UCN612ASBDEP.07000.SMR  UCN612ASBDEP.08000.SMR  UCN612ASBDEP.09000.SMR  UCN612ASBDEP.10000.SMR  UCN612ASBDEP.11000.SMR  UCN612ASBDEP.12000.SMR  UCN612ASBDEP.13000.SMR  UCN612ASBDEP.14000.SMR  UCN612ASBDEP.15000.SMR  UCN612ASBDEP.16000.SMR  UCN612ASBDEP.17000.SMR  UCN612ASBDEP.17570.SMR  UCN612ASBDEP.FCE.SMG  UCN612ASBDEP.SMG
run/ygn3/: Y301ASBDEP.00000.SMR  Y301ASBDEP.00050.SMR  Y301ASBDEP.00150.SMR  Y301ASBDEP.00500.SMR  Y301ASBDEP.01000.SMR  Y301ASBDEP.02000.SMR  Y301ASBDEP.03000.SMR  Y301ASBDEP.04000.SMR  Y301ASBDEP.05000.SMR  Y301ASBDEP.06000.SMR  Y301ASBDEP.07000.SMR  Y301ASBDEP.08000.SMR  Y301ASBDEP.09000.SMR  Y301ASBDEP.10000.SMR  Y301ASBDEP.11000.SMR  Y301ASBDEP.12000.SMR  Y301ASBDEP.13000.SMR  Y301ASBDEP.13650.SMR  Y301ASBDEP.SMG  Y312ASBDEP.00000.SMR  Y312ASBDEP.00050.SMR  Y312ASBDEP.00150.SMR  Y312ASBDEP.00500.SMR  Y312ASBDEP.01000.SMR  Y312ASBDEP.02000.SMR  Y312ASBDEP.03000.SMR  Y312ASBDEP.04000.SMR  Y312ASBDEP.05000.SMR  Y312ASBDEP.06000.SMR  Y312ASBDEP.07000.SMR  Y312ASBDEP.08000.SMR  Y312ASBDEP.09000.SMR  Y312ASBDEP.10000.SMR  Y312ASBDEP.11000.SMR  Y312ASBDEP.12000.SMR  Y312ASBDEP.13000.SMR  Y312ASBDEP.14000.SMR  Y312ASBDEP.15000.SMR  Y312ASBDEP.16000.SMR  Y312ASBDEP.17000.SMR  (+26 more)
src/: ASISearcher.cpp  ASISearcher.h  BICG.cpp  BICG.h  BICGCMFD.cpp  BICGCMFD.h  BICGCMFDCuda.cpp  BICGCMFDCuda.h  BICGSolver.cpp  BICGSolver.h  CComposition.f90  CFormFunction.f90  CIsotope.f90  CMFD.cpp  CMFD.cu  CMFD.h  CMFDCPU.cpp  CMFDCPU.h  CReflector.f90  CSRSolver.cpp  CSRSolver.h  CSteamTable.f90  CTableSet.f90  ControlRod.cpp  ControlRod.h  CrossSection.cpp  CrossSection.h  CrossSectionCuda.cpp  CrossSectionCuda.h  CuSFAM.cpp  CuSFAM.h  Depletion.cpp  Depletion.h  DepletionChain.cpp  DepletionChain.h  DepletionCuda.cpp  DepletionCuda.h  Feedback.cpp  Feedback.h  FeedbackCuda.cpp  (+70 more)
src.nist/: Makefile  aideal.f  ancond.f  anistf.f  aresid.f  bkcond.f  block.data  bndchk.f  coef.cmn  coefig.cmn  dens.f  dens0.f  dfind.f  dfind0.f  dfind1.f  dfind2.f  dielec.f  dlsat.f  dlsatc.f  dvsat.f  dvsatc.f  hssolv.f  ivzero.f  kfact.f  nprop.cmn  pcoex.f  pdp.f  phsolv.f  pmelt.f  pmelt1.f  pmelt2.f  props.f  props0.f  props1.f  props2.f  psat.f  pssolv.f  psub.f  pvap.f  pvapc.f  (+16 more)
src.python/: Simon.py  requirements.txt  sample.common.settings  simon_python.pyproj  simon_sample.py
src.python/SIMON_Python/: Definitions.pyw  SIMON_OPR_0.1.0.spec  SIMON_Python.pyproj  SIMON_SAMPLE.spec  Simon.pyw  app_modules.pyw  calculation_widget.pyw  cecor_read.py  constants.pyw  files_rc.pyw  main.pyw  main.spec  main_ui.pyw  makeEXE.txt  model.pyw  settings.pyw  simon.db  splash_screen.pyw  ui_calculation.pyw  ui_functions.pyw  ui_functions_settings.pyw  ui_main.pyw  ui_main_rev18.pyw  ui_unitWIdget_RPCS.pyw  ui_unitWidget_CoastDown.pyw  ui_unitWidget_ECP_rev5.pyw  ui_unitWidget_ECP_revS01.pyw  ui_unitWidget_IO.pyw  ui_unitWidget_Lifetime.pyw  ui_unitWidget_Lifetime_rev1.pyw  ui_unitWidget_PA.pyw  ui_unitWidget_RO_rev1.pyw  ui_unitWidget_RO_revS01.pyw  ui_unitWidget_SDM_rev1.pyw  ui_unitWidget_SDM_revS01.pyw  ui_unitWidget_SD_rev2.pyw  ui_unitWidget_SD_revS01.pyw  ui_unitWidget_contents.pyw  ui_unitWidget_setting.pyw  ui_unitWidget_snapshot.pyw  (+1 more)
src.python/SIMON_Python/lib/: customModel.pyw
src.python/SIMON_Python/widgets/: Simon.pyw  sdm.pyw
src.python/SIMON_Python/widgets/calculations/: IO_table.pyw  RPCS.pyw  calculation.pyw  calculationManager.pyw  calculationManagerProcess.pyw  calculation_widget.pyw  coastdown.pyw  ecp.pyw  ecp4.pyw  ecp5.pyw  lifetime.pyw  reoperation.pyw  sdm.pyw  shutdown.pyw  shutdown_old.pyw  snapshot.pyw
src.python/SIMON_Python/widgets/output/: tile_output.pyw
src.steamf/: block.data  comt1.f  comt2.f  comt3.f  condv.f  cppt1.f  cppt2.f  cpvt3.f  grs.f  h2oscn.f  hpt1.f  hpt2.f  hptl.f  hss.f  hvt3.f  p23t.f  prliq.f  prstm.f  psl.f  pvt3.f  satur.f  sigma.f  spt1.f  spt2.f  srsort.f  steamf.f  ster.f  svt3.f  tsl.f  visl.f  vpt1.f  vpt2.f  vpt3.f  vptd.f
(+26 files in other folders)
